--- a/templates/anders.html
+++ b/templates/anders.html
@@ -5,7 +5,7 @@
 <body>
 Andersen that lives on the roof<br/> Welcome aboard, son!
 
-<img src="{{ url_for("static", filename="anders1.JPG") }}" alt="ops image">
+<img src="{{ url_for("static", filename="anders.JPG") }}" alt="ops image">
 
 </body>
 </html>
