--- a/templates/anders.html
+++ b/templates/anders.html
@@ -2,7 +2,8 @@
 <head>
 <title>Welcome to Andersen</title>
 </head>
-<body>
+<body  background: "BLUE">
+   
 Andersen that lives on the roof<br/> Welcome aboard, son!
 
 <img src="{{ url_for("static", filename="anders.JPG") }}" alt="ops image">
