--- a/templates/anders.html
+++ b/templates/anders.html
@@ -2,7 +2,7 @@
 <head>
 <title>Welcome to Andersen</title>
 </head>
-<body  background: "BLUE">
+<body  background: "BLACK">
    
 Andersen that lives on the roof<br/> Welcome aboard, son!
 
