--- a/app1/templates/anders.html
+++ b/app1/templates/anders.html
@@ -2,7 +2,7 @@
 <head>
 <title>Welcome to Andersen</title>
 </head>
-<body  background: "BLUE">
+<body  bgcolor = "#FFFF99">
    
 Andersen that lives on the roof<br/> Welcome aboard, son!
 
