--- a/templates/anders.html
+++ b/templates/anders.html
@@ -4,9 +4,11 @@
 </head>
 <body  bgcolor = "#FFFF99">
    
-Andersen that lives on the roof<br/> Welcome aboard, son!
+<h1>Andersen that lives on the roof<h1><br/> 
 
 <img src="{{ url_for("static", filename="anders.JPG") }}" alt="ops image">
+
+<h1> Welcome aboard, son! <h1>
 
 </body>
 </html>
