--- a/templates/anders.html
+++ b/templates/anders.html
@@ -2,7 +2,8 @@
 <head>
 <title>Welcome to Andersen</title>
 </head>
-<body  bgcolor = "#FFFF99">
+<body  bgcolor = "RED">
+
    
 <h1>Andersen that lives on the roof<h1><br/> 
 
