--- a/templates/anders.html
+++ b/templates/anders.html
@@ -2,7 +2,7 @@
 <head>
 <title>Welcome to Andersen</title>
 </head>
-<body  bgcolor = "RED">
+<body  bgcolor = "Yellow">
 
    
 <h1>Andersen that lives on the roof<h1><br/> 
